# pollard

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  LOGBOOK.md  README.md  findings.md  pyproject.toml
.github/workflows/: README.md  ci.yml  publish.yml
docs/: README.md  api-reference.md  api-stability.md  cloud-providers.md  data-governance.md  distributed-stores.md  kafka-operations.md  launch.md  mongodb-operations.md  neo4j-operations.md  observability.md  postgres-operations.md  provider-boundary-hardening.md  redis-operations.md  releasing.md  scale-out.md  seal.md  store-backend-validation.md  troubleshooting.md
docs/recipes/: README.md  anthropic_tool_loop.py  azure_openai.py  bedrock_converse.py  langgraph_node.py  litellm_cloud.py  mcp_registry.py  openai_tool_loop.py  pydantic_ai_wrap.py
evidence/: README.md  prices.toml
evidence/EXP-001/: local-model-result.json
evidence/EXP-004/: result.json
evidence/EXP-005/: result.json
evidence/EXP-006/: README.md  manifest.json
evidence/EXP-006/code-fix/: outcome.json  run.db  seal.json  test-result.json  tree.html
evidence/EXP-006/code-fix/fixed/: calculator.py
evidence/EXP-006/inputs/code-fix/repo/: calculator.py  test_calculator.py
evidence/EXP-006/inputs/mcp/servers/: catalog_server.py  math_server.py  policy_server.py
evidence/EXP-006/inputs/research/: DOC-001.md  DOC-002.md  DOC-003.md
evidence/EXP-006/mcp-household/: outcome.json  run.db  seal.json  tree.html
evidence/EXP-006/research/: outcome.json  run.db  seal.json  tree.html
examples/: 01_governed_call.py  02_best_of_n.py  03_budget_stop.py  04_firewall.py  05_replay_ci.py  06_phase4_benchmarks.py  07_phase7_storage.py  08_phase8_scaleout.py  09_distributed_stores.py  10_streaming_replay.py  11_sensitive_fields.py  12_dry_run_confirmation.py  13_async_workflow.py  README.md  _exp006_common.py  exp_001_local_model.py  exp_004_storage.py  exp_005_contention.py  exp_006_code_fix.py  exp_006_mcp_household.py  exp_006_research.py  exp_006_verify.py  mcp_demo_server.py  mock_model.py  prices.example.toml
src/pollard/: __init__.py  _canon.py  aio.py  arbiter.py  cli.py  errors.py  governance.py  governor.py  hashing.py  mcp.py  merge.py  otel.py  policy.py  pytest_plugin.py  redaction.py  registry.py  replay.py  runtime.py  schema.py  seal.py  seal_custody.py  store.py  tree.py  verify.py
src/pollard/adapters/: __init__.py  _common.py  anthropic.py  bedrock.py  litellm.py  openai.py
src/pollard/estimators/: __init__.py  openai.py
src/pollard/meters/: __init__.py  energy.py  tokenmaster.py
src/pollard/stores/: __init__.py  _transactional.py  hashrope.py  kafka.py  mongodb.py  neo4j.py  postgres.py  redis.py  sqlite.py
tests/: conftest.py  test_adapters.py  test_aio.py  test_canon.py  test_cli.py  test_distributed_store_example.py  test_documentation.py  test_energy.py  test_estimators.py  test_evidence.py  test_examples.py  test_governance.py  test_governor.py  test_hashing.py  test_import.py  test_mcp.py  test_merge.py  test_meters.py  test_otel.py  test_policy.py  test_pytest_plugin.py  test_readme_links.py  test_recipes.py  test_redaction.py  test_registry.py  test_replay.py  test_replay_ci.py  test_runtime.py  test_seal.py  test_seal_custody.py  test_store_backend_failures.py  test_store_hashrope.py  test_store_kafka.py  test_store_memory.py  test_store_postgres.py  test_store_remote.py  test_store_shared.py  test_store_sqlite.py  test_store_transactional.py  test_tokenmaster_meter.py  (+3 more)
tests/fixtures/: anthropic_message.json  anthropic_stream.json  anthropic_tool_use.json  bedrock_converse.json  bedrock_stream.json  litellm_response.json  litellm_stream.json  openai_chat.json  openai_response.json  openai_stream.json  openai_tool_call.json
tests/golden/: cli_tree.html
tests/pollard_recordings/: test_replay_ci.db
